<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
       <include layout="@layout/title_showstudent"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
               android:text="@string/string_studentnumber"
                android:textColor="@color/colorTitleWhite"
                android:textSize="30sp"
                android:gravity="center"
                android:background="@color/colorBackGreen"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/string_studentname"
                android:textColor="@color/colorTitleWhite"
                android:textSize="30sp"
                android:gravity="center"
                android:background="@color/colorYellow"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/string_studentclass"
                android:textColor="@color/colorTitleWhite"
                android:textSize="30sp"
                android:gravity="center"
                android:background="@color/colorTitleBlue"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/string_studentlater"
                android:textColor="@color/colorTitleWhite"
                android:textSize="30sp"
                android:gravity="center"
                android:background="@color/colorPurple"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/string_studentanswer"
                android:textColor="@color/colorTitleWhite"
                android:textSize="30sp"
                android:gravity="center"
                android:background="@color/colorRed"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <include layout="@layout/body_showstudent"/>

</LinearLayout>